# inspect_viz

./: .gitattributes  .gitignore  .nojekyll  README.md  bar_plot_dev.html  components-inputs.html.md  components-interactivity.html.md  components-links.html  components-links.html.md  components-log-links.html  components-marks.html  components-marks.html.md  components-plots.html  components-plots.html.md  components-selections.html.md  components-tables.html  components-tables.html.md  concepts.html  index.html.md  llm-assistance.html  llms-full.txt  llms-guide.txt  llms.txt  package.json  plots.html  publishing-dashboards.html  publishing-dashboards.html.md  publishing-notebooks.html  publishing-notebooks.html.md  publishing-output-format.html  publishing-plots.html  publishing-plots.html.md  publishing-png-output.html  publishing-png-output.html.md  publishing-websites.html  publishing-websites.html.md  publishing.html  pyproject.toml  robots.txt  search.json  (+21 more)
components/: inputs.html  marks.html  plots.html  selections.html  tables.html
demo/: evals.ipynb  evals.qmd
docs/: .gitignore  _data.md  _data_preparation.md  _data_preparation_optional.md  _data_preparation_scores_by_limit.md  _data_preparation_scores_radar.md  _observable-tip.md  _quarto.yml  _views.md  _write-png.md  agi-lsat-ar.parquet  benchmarks.parquet  components-inputs.qmd  components-interactivity.qmd  components-links.qmd  components-marks.qmd  components-plots.qmd  components-selections.qmd  components-tables.qmd  concepts.qmd  cybench_token_usage.parquet  evals-hint.parquet  evals.parquet  flights.parquet  gpqa.parquet  index.qmd  llm-assistance.qmd  llms.txt  publishing-dashboards.qmd  publishing-notebooks.qmd  publishing-output-format.qmd  publishing-plots.qmd  (+22 more)
(+266 files in other folders)
