[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect_viz"
version = "0.0.1"
authors = [{ name = "Meridian Labs" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
    "ipython",
    "shortuuid",
    "anywidget>=0.9.0",
    "traitlets>=5.9.0",
    "narwhals>=1.15.1",
    "nest_asyncio",
    "pandas>=2.2.2",
    "pyarrow>=15.0.0",
    "pillow",
    "pydantic",
    "sniffio",
    "typing_extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "watchfiles",
    "jupyterlab",
    "ruff",
    "mypy",
    "datamodel-code-generator",
    "pandas-stubs",
    "playwright",
    "pyarrow-stubs",
    "pytest",
    "types-pillow",
]
doc = [
    "quarto-cli==1.7.31",
    "jupyter",
    "panflute",
    "markdown",
    "griffe",
    "pyyaml",
]

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel.force-include]
"src/inspect_viz/_widgets" = "inspect_viz/_widgets"


[tool.ruff]
extend-exclude = ["docs"]
src = ["."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # flake8
    "D",      # pydocstyle
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM101", # duplicate isinstance
    # "RET", # flake8-return
    # "RUF", # ruff rules
]
ignore = ["E203", "E501", "D10", "D212", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_executable = ".venv/bin/python3"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
